--- a/webapp/frontend/app/globals.css
+++ b/webapp/frontend/app/globals.css
@@ -2323,24 +2323,28 @@ html {
 
 .document-editor-content .tiptap p {
   margin: 0.25em 0;
+  line-height: 1.5;
 }
 
 .document-editor-content .tiptap h1 {
   font-size: 1.75em;
   font-weight: 700;
   margin: 0.75em 0 0.25em;
+  line-height: 1.5;
 }
 
 .document-editor-content .tiptap h2 {
   font-size: 1.35em;
   font-weight: 600;
   margin: 0.6em 0 0.2em;
+  line-height: 1.5;
 }
 
 .document-editor-content .tiptap h3 {
   font-size: 1.1em;
   font-weight: 600;
   margin: 0.5em 0 0.15em;
+  line-height: 1.5;
 }
 
 /* Document images */
